--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://NohamedIqlas.github.io/crudDashboard",
+  "homepage": "http://MohamedIqlas.github.io/crudDashboard",
   "name": "vite-react-typescript-starter",
   "private": true,
   "version": "0.0.0",
